# SO

Ejercicio_01/: CMakeLists.txt
Ejercicio_02/: CMakeLists.txt  Driver.c  File.h  tests.txt
Ejercicio_03/Problema/src/: Ejercicio3.c
Ejercicio_03/Resuelto/src/: Ejercicio3.c
Ejercicio_04/Problema/: CMakeLists.txt
Ejercicio_04/Problema/src/: Cliente.c  Cliente.h  Factura.c  Leaks.c
Ejercicio_04/Problema/src/Collections/: list.h  queue.c
Ejercicio_04/Resolucion/src/: Cliente.c  Factura.c  Factura.h  Item.c  Item.h  Leaks.c
Ejercicio_04/Resolucion/src/Collections/: node.h
Ejercicio_05/Problema/src/: SolucionLeo.c
Ejercicio_05/Resuelto/src/: SolucionLeo.c
Ejercicio_06/Problema/src/: Ejercicio6.c  Ejercicio6.h
Ejercicio_06/Problema/src/Collections/: queue.c
Ejercicio_07/Problema/src/Collections/: list.c
Ejercicio_08/Problema/src/: EnviarSpock.c  TraerSpock.c
Ejercicio_08/Problema/src/spock/: Mascota.c  Mision.c  Spock.h  Villano.c
Ejercicio_08/Resuelto/src/: EnviarSpock.c  TraerSpock.c
Ejercicio_08/Resuelto/src/spock/: Mascota.h  Mision.c  Mision.h  Spock.c  Stream.c  Stream.h  Villano.h
Ejercicio_09/Resuelto/Servidor/src/: Ejercicio9.c
Ejercicio_10/Resuelto/Cliente/src/: Ejercicio10.c
Ejercicio_10/Resuelto/Servidor/src/: Ejercicio10.c
Ejercicios de C/Ejercicio_01/: Basics.c  Basics.h  Driver.c
Ejercicios de C/Ejercicio_02/: File.c
Ejercicios de C/Ejercicio_03/: CMakeLists.txt
Ejercicios de C/Ejercicio_03/Solucion/: Ejercicio3.c
Ejercicios de C/Ejercicio_04/Problema/src/: Cliente.c  Cliente.h  Factura.c
Ejercicios de C/Ejercicio_05/Problema/src/: SolucionLeo.h
Ejercicios de C/Ejercicio_06/Resuelto/src/: Ejercicio6.c  Ejercicio6.h
TP0/: CMakeLists.txt  tp0.c  tp0.config  tp0.h  utils.c  utils.h
TP0/Servidor/: servidor.c  servidor.h  utils.c  utils.h
(+15 files in other folders)
